Stop using text-align: justify
We need an automatic hyphenation.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -112,10 +112,6 @@ p {
   margin-block-start: var(--space-tiny);
 }
 
-:where(main) p {
-  text-align: justify;
-}
-
 hr {
   border-block-end: none;
   border-block-start-style: solid;
@@ -276,7 +272,6 @@ h2 + .date {
 
 .date + * {
   margin-block-start: 0;
-  text-align: start;
 }
 
 /* Page Footer */
@@ -308,10 +303,6 @@ h2 + .date {
 }
 
 /* Yearly Archives */
-.yearly-archives p {
-  text-align: start;
-}
-
 .yearly-archives a {
   word-break: keep-all;
 }
